# falcon-datamover

./: .gitignore  LICENSE  README.md  checksum.py  falcon.py  logs.py  pyproject.toml  search.py  utils.py
src/falcon/: __init__.py  __main__.py  configs.py  logs.py  search.py  utils.py
